--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <!-- Replace src with your real images in /assets/ -->
       <figure>
         <img loading="lazy" src="assets/pic1.jpg" alt="Memory 1" data-index="0">
-        <figcaption class="caption">Day 1: when it all started</figcaption>
+        <figcaption class="caption">Day 1: lover</figcaption>
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic2.jpg" alt="Memory 2" data-index="1">
@@ -237,7 +237,7 @@
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic3.jpg" alt="Memory 3" data-index="2">
-        <figcaption class="caption">Us, being us.</figcaption>
+        <figcaption class="caption">You, being you.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic4.jpg" alt="Memory 4" data-index="3">
@@ -245,11 +245,11 @@
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic5.jpg" alt="Memory 5" data-index="4">
-        <figcaption class="caption">Can’t stop, won’t stop.</figcaption>
+        <figcaption class="caption">Can’t stop, won’t stop loving you.</figcaption>
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic6.jpg" alt="Memory 6" data-index="5">
-        <figcaption class="caption">The best duo.</figcaption>
+        <figcaption class="caption">You are the best.</figcaption>
       </figure>
     </div>
   </section>
