--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
     <div class="note" id="loveNote">
       To my favorite human, <strong id="noteName">Bae</strong>:
       <br><br>
-      You light up every room you walk into, and somehow you made my whole year brighter. I love the way your eyes close when you laugh, and how your voice sits in my head long after we hang up. Today is all about you — and I’m so grateful I get to celebrate the masterpiece that you are. Here’s to joy, softness, surprises, and everything you deserve. Forever your biggest fan. 💗
+      Oi oi meu amor, my skat, my 3in1 given by the Holy 3in1!
+Look at me forcing you to celebrate yourself for a change...the same way you make  sure that I giggle like a fool inlove every Nov the 12th.
+Ek is lief vir jou with every breath I take. You're my fifty shades and more. I love the sensitive baby in you...the dedicated priesthood holder that fears God. Eu tambèm amo the you that crashes and cry "baby I'm tired it's too much", even the filthy hustler in you that refuses to bath sometimes is mine and I love every part of it. You still remember ndikfundis' ukshela saying "Just say I love you Naledi" hahaha, I didn't think it would be a compass to this amazing city of ĺove, laughter and peace that we live in. You're my home, my safe space and I'm so  grateful for you. 
+Torna-se audaz e sabio. You're a beautiful soul...Feliz anivesario papi. Breath and live! I love you; Always and eternally! 💗
       <br><br>
       — with love
     </div>
