--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <!-- Replace src with your real images in /assets/ -->
       <figure>
         <img loading="lazy" src="assets/pic1.jpg" alt="Memory 1" data-index="0">
-        <figcaption class="caption">Day 1: lover</figcaption>
+        <figcaption class="caption">Day 1: Lover</figcaption>
       </figure>
       <figure>
         <img loading="lazy" src="assets/pic2.jpg" alt="Memory 2" data-index="1">
