--- a/index.html
+++ b/index.html
@@ -276,8 +276,7 @@ Torna-se audaz e sabio. You're a beautiful soul...Feliz anivesario papi. Breath 
 
   <!-- Placeholder: Sticky audio control (hidden by default, structure kept) -->
   <div class="audio-ctrl" id="audioCtrl" hidden>
-    <button class="btn" id="playPause">⏸ Pause</button>
-    <span id="nowPlaying">Now playing: Your Song 💿</span>
+    <button class="btn" id="playPause">▶ Play this Song 🎵</button>
   </div>
 
   <!-- Placeholder: Audio element (you can replace src when needed) -->
